# CalcGTest-Homework

./: CMakeLists.txt  README.md  SimpleCalculator.cpp
CalculatorTests/: tests.cpp
